Add cookie parsing and testing
Also add the skeleton of a cookie jar, cookie jar policy, storage that
can be swapped out (e.g., eventually support file based storage or some
kind of datastore storage that users could write themselves)

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 name = moreos
 description = The cookie library with more security.
 long-description = file: README.rst
+long-description-content-type = text/x-rst
 home-page = https://github.com/sigmavirus24/moreos
 author = Ian Stapleton Cordasco
 author-email = graffatcolmingov@gmail.com
@@ -28,16 +29,14 @@ package-dir =
     = src
 install-requires =
     attrs >= 18.1.0
+    python-dateutil >= 2.8.0
 
 [options.package_data]
-rush = py.typed
+moreos = py.typed
 
 [options.packages.find]
 where = src
 
 ; mypy config
-[mypy-redis]
-ignore_missing_imports = True
-
-[mypy-rfc3986]
+[mypy-dateutil]
 ignore_missing_imports = True
