Use the matrix python version to run tests
TIL about `nox -p` (a.k.a., `nox --python`)

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,12 +29,6 @@ jobs:
     - name: Lint
       run: |
         nox -e lint
-    - name: Test with py3.6
+    - name: Test
       run: |
-        nox -e test-3.6
-    - name: Test with py3.7
-      run: |
-        nox -e test-3.7
-    - name: Test with py3.8
-      run: |
-        nox -e test-3.8
+        nox -p ${{ matrix.python-version }}
