Rely on zope.interface for our collaborators

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ package-dir =
 install-requires =
     attrs >= 18.1.0
     python-dateutil >= 2.8.0
+    zope.interface>=5.2.0
 
 [options.package_data]
 moreos = py.typed
@@ -39,7 +40,9 @@ where = src
 
 ; mypy config
 [mypy]
+namespace_packages = True
 strict = True
+plugins = mypy_zope:plugin
 
 [mypy-dateutil]
 ignore_missing_imports = True
